# mkspy

./: .gitignore  AGENTS.md  README.md  codegen.py  main.py  pyproject.toml  pyrightconfig.json
docs/adr/: 0001-dsl.md
dspy/: __init__.py
dspy/primitives/: prediction.py
dspy/teleprompt/gepa/: gepa.py  gepa_utils.py
examples/: perf_profile.py
mkspy/: __init__.py  author.py  cli.py  codegen.py  codemod.py  cst_utils.py  evolver.py  gepa_evolver.py  meta_module.py  metrics.py  migrate.py  model.py  mutations.py  smart_mutations.py  task_library.py  types.py  validation.py
stubs/dspy/: __init__.pyi
stubs/dspy/primitives/: __init__.pyi  prediction.pyi
stubs/dspy/teleprompt/gepa/: gepa.pyi  gepa_utils.pyi
stubs/mkspy/: metrics.pyi
tests/: test_dsl_orthogonality.py  test_gepa_evolver.py  test_metric.py  test_smoke.py
