[project]
name = "mkspy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dspy-ai>=3.0.2",
    "gepa>=0.0.4",
    "libcst>=1.8.2",
]

[dependency-groups]
dev = [
    "basedpyright>=1.31.3",
    "hypothesis>=6.138.13",
    "pre-commit>=4.3.0",
    "pytest>=8.4.1",
    "pyupgrade>=3.20.0",
    "ruff>=0.12.11",
]
